Updates for RIFE2 v1.3.0. Added README information about GraalVM native-image support.